k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wellbing-client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wellbing-client
  template:
    metadata:
      labels:
        app: wellbing-client
    spec:
      containers:
        - name: wellbing-client
          image: <your-container-registry>/wellbing-client:latest # CI/CD 파이프라인에서 이 부분을 업데이트해야 합니다.
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wellbing-client-service
  namespace: wellbing-massage
spec:
  selector:
    app: wellbing-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
