k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wellbing-server-deployment
  namespace: hoyaweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wellbing-server
  template:
    metadata:
      labels:
        app: wellbing-server
    spec:
      containers:
        - name: wellbing-server
          image: parkjeongho/wellbing-server:071542bef7107c375da097ea718bf6d61b60f89b
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: wellbing-data-storage
              mountPath: /usr/src/app/server/data
            - name: wellbing-data-storage
              mountPath: /usr/src/app/server/public/uploads
      volumes:
        - name: wellbing-data-storage
          persistentVolumeClaim:
            claimName: wellbing-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wellbing-server-service
  namespace: hoyaweb
spec:
  selector:
    app: wellbing-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
